--- a/app/home/page.module.css
+++ b/app/home/page.module.css
@@ -4,16 +4,16 @@
     height: 100vh;
     width: 100%;
     overflow: hidden;
+    display: flex;
 }
 
 .grid2x2 {
     margin: 20px auto;
     width: 80%;
     height: 80%;
-    background-color: #fff;
+    align-self: center;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-row: auto auto;
     grid-column-gap: 10px;
     grid-row-gap: 10px;
 }
