added the dynamic loading of players based on gamestate defaults and player counts

--- a/app/components/player/player.module.css
+++ b/app/components/player/player.module.css
@@ -3,6 +3,7 @@
     border-radius: 10px;
     color: #fff;
     display: grid;
+    align-items: center;
     font-size: 60px;
     font-family: sans-serif;
 }
@@ -12,12 +13,13 @@
     border-radius: 10px;
     color: #fff;
     display: grid;
+    align-items: center;
     font-size: 60px;
     font-family: sans-serif;
     transform: rotate(180deg);
 }
 
-.p_life_total {
+.plife_total {
     display: flex;
     align-self: center;
     justify-self: center;
@@ -26,7 +28,7 @@
 
 }
 
-.p_life_total p {
+.plife_total p {
     display: flex;
     align-self: center;
     justify-self: center;
